2016-11-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/amtapetype.pl: Correctly check result of property_set

2016-11-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/components.m4 (AMANDA_WITHOUT_REST_SERVER): New
	  --without-rest-server option
	* Makefile.am: Do not build rest-server if
	  --without-rest-server
	* config/amanda/libs.m4: Fix typo
	* man/Makefile.am: Do not build amanda-rest-server.8 if
	  --without-rest-server
	* perl/Makefile.am: Do not build Amanda::Rest modules if
	  --without-rest-server
	* server-src/Makefile.am: Do not build amanda-rest-server if
	  --without-rest-server

2016-11-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Correctly handle Region not found
	* device-src/s3.h: Add S3_ERROR_Region_Not_Found

2016-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Verify a publicURL is found

2016-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: publicURl and region can be unordered

2016-11-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Use the publicURL from the good region

2016-11-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amcheck.c: Fix

2016-11-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Set $dlet->{'wsize'} to $dlet->{'taped_size'}
	  if it is bigger
	* perl/Amanda/Taper/Scribe.pm (get_bytes_written): Do not set oldsize
	  to size if size==0
	* perl/Amanda/Taper/Worker.pm: Delete the statefile later

2016-11-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/xfer-dest-taper-splitter.c: ring buffer might never be
	  full

2016-10-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amcheck.c: Print message 2800016 to mainfd

2016-10-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Service/Amidxtaped.pm: Do not send mesage 4900000 and
	  4900012 to client